tests/valid/test07_tres_params.ml
// Test 07: Función con tres parámetros
func promedio3(a, b, c) {
    return (a + b + c) / 3;
}
p = promedio3(10, 20, 30);
print(p);
