tests/errors/err03_args_de_mas.ml
// Error 03: [SEMÁNTICO] Demasiados argumentos
func suma(a, b) {
    return a + b;
}
r = suma(1, 2, 3);
print(r);
